# credit-risk-ml-pipeline

./: .gitignore  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml  preprocessing_config.yaml
src/credit_pipeline/data/: cleaner.py  loader.py  merger.py  separator.py  splitter.py
src/credit_pipeline/explainability/: shap_analysis.py
src/credit_pipeline/fairness/: audit.py
src/credit_pipeline/features/: engineering.py
src/credit_pipeline/models/: ensemble.py  evaluate.py  optuna_tuning.py  threshold_tuning.py  train.py
src/credit_pipeline/preprocessing/: pipeline.py  transformers.py
src/credit_pipeline/utils/: config.py  mlflow_logger.py  paths.py
src/scripts/: train_pipeline.py
